# GPShieldServerApp

./: CMakeLists.txt  Resource.qrc  dlglicense.cpp  dlglicense.h  dlglicense.ui  encryptdecrypt.cpp  encryptdecrypt.h  global_vars.cpp  global_vars.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  setup.iss  tcpserver.cpp  tcpserver.h  tcpsocket.cpp  tcpsocket.h
